--- a/index.html
+++ b/index.html
@@ -3,3 +3,23 @@ print("hello")
 print("world")
 input("please enter your name:  ")
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello World Example</title>
+</head>
+<body>
+  <script>
+    // Print to the web page
+    document.write("hello<br>");
+    document.write("world<br>");
+
+    // Ask for user input
+    let name = prompt("please enter your name: ");
+
+    // Show the entered name
+    document.write("You entered: " + name);
+  </script>
+</body>
+</html>
