--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-print("hello")
-
-print("world")
-input("please enter your name:  ")
+<>print("hello")
+<>
+<>print("world")<>
+<>input("please enter your name:  ")<>
 
 <!DOCTYPE html>
 <html lang="en">
